@@ -2,3 +2,4 @@ Revision history for Sys-Monitor-Lite
 
 0.01  2025-10-19
     - Initial release to CPAN.
+    - Added optional human-readable augmentation for collected metrics.
